--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     height: 400px;
 }
 
-.screen {
+.display {
     display: flex;
     justify-content: space-around;
     border: 5px;
@@ -52,7 +52,8 @@
     align-items: center;
 }
 
-.button {
+.number, .operator {
     height: 50px;
     width: 50px;
 }
+
