--- a/style.css
+++ b/style.css
@@ -29,13 +29,19 @@
     height: auto;
 }
 
-/*.operationDisplay {
+.operationDisplay {
     display: flex;
     justify-content: right;
     font-size: x-large;
     font-weight: bolder;
     margin-right: 10px;
-}*/
+}
+
+.equationVar {
+    border: 5px;
+    border-style: outset;
+    min-width: 15px;
+}
 
 .resultantDisplay {
     display: flex;
