--- a/style.css
+++ b/style.css
@@ -38,19 +38,15 @@
 }
 
 .equationVar {
-    border: 5px;
-    border-style: outset;
     min-width: 15px;
     min-height: 30px;
 }
 
-.resultantDisplay {
+.resultantDisplay, .answerDisplay {
     display: flex;
     justify-content: right;
     font-size: medium;
     margin-right: 10px;
-    border: 5px;
-    border-style: outset;
     min-width: 25px;
     min-height: 30px;
 }
@@ -66,8 +62,6 @@
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     align-items: center;
-
-
 }
 
 .functions {
